--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
+    "videogular2": "^5.2.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
