--- a/travis.yml
+++ b/travis.yml
@@ -9,8 +9,7 @@ branches:
     - master
 
 before_script:
-#  - npm install -g firebase-tools
-#  - npm install -g @angular/cli
+  - npm install -g @angular/cli
 
 script:
   - ng build --prod
