--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ before_script:
 script:
   - ng build --prod
 
+deploy:  
+  provider: azure_web_apps
+  skip_cleanup: true
+
 after_success:
 #  - firebase deploy --token $FIREBASE_TOKEN
 
