--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/core-js": "^0.9.41",
     "angular2-masonry": "^0.4.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
