--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 script:
   - ng build
   - git add *
-  - git commit "Travis CI build."
+  - git commit -m "Travis CI build."
 
 deploy:  
   provider: azure_web_apps
