Still trying to deploy to Azure using Travis.CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,13 @@ before_script:
 
 script:
   - ng build
-  - git add *
-  - git commit -m "Travis CI build."
 
 deploy:  
   provider: azure_web_apps
-  skip_cleanup: false
+  skip_cleanup: true
+  verbose: true
+  on:
+    branch: master
   
 after_success:
 #  - firebase deploy --token $FIREBASE_TOKEN
