Trying to figure out how to deploy dist folder only from travis.ci to azure.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   site: learnwild
   skip_cleanup: false
   verbose: true
-  file: "dist/"
+  #file: "dist/"
   on:
     branch: master
   
