--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@angular/router": "^4.0.0",
     "@types/core-js": "^0.9.41",
     "angular2-masonry": "^0.4.0",
+    "angularfire2": "^4.0.0-rc.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "firebase": "^4.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "videogular2": "^5.2.2",
