--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.0.0",
     "hammerjs": "^2.0.8",
+    "promise-polyfill": "^6.0.2",
     "rxjs": "^5.1.0",
     "videogular2": "^5.2.2",
     "zone.js": "^0.8.4"
