--- a/package.json
+++ b/package.json
@@ -12,25 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.2",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
     "@angular/material": "^2.0.0-beta.4",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/platform-server": "^4.1.3",
+    "@angular/router": "^4.1.3",
     "@types/core-js": "^0.9.41",
     "angular2-masonry": "^0.4.0",
-    "angularfire2": "^4.0.0-rc.0",
+    "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "firebase": "^4.0.0",
+    "firebase": "^4.1.2",
     "hammerjs": "^2.0.8",
     "promise-polyfill": "^6.0.2",
     "rxjs": "^5.1.0",
+    "typescript": "^2.3.4",
     "videogular2": "^5.2.2",
     "zone.js": "^0.8.4"
   },
