--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/forms": "^4.1.3",
-    "@angular/http": "^4.1.3",
-    "@angular/material": "^2.0.0-beta.4",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
-    "@angular/platform-server": "^4.1.3",
-    "@angular/router": "^4.1.3",
+    "@angular/animations": "^4.4.4",
+    "@angular/common": "^4.4.4",
+    "@angular/compiler": "^4.4.4",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/forms": "^4.4.4",
+    "@angular/http": "^4.4.4",
+    "@angular/material": "^2.0.0-beta.11",
+    "@angular/platform-browser": "^4.4.4",
+    "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/platform-server": "^4.4.4",
+    "@angular/router": "^4.4.4",
     "@types/core-js": "^0.9.41",
     "angular2-masonry": "^0.4.0",
     "angularfire2": "^4.0.0-rc.1",
@@ -38,8 +38,10 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.1",
+    "@angular/cdk": "^2.0.0-beta.11",
+    "@angular/cli": "^1.4.4",
     "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.4.4",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
