--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,22 @@ node_js:
 branches:
   only:
     - master
+    - dev
 
 before_script:
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
 script:
-  - ng build
-  
+  - if [ "$TRAVIS_BRANCH" = "dev" ]; then ng build
+  - if [ "$TRAVIS_BRANCH" = "master" ]; then ng build -prod
+
 after_success:
-  - firebase deploy --token $FIREBASE_TOKEN
+  #- firebase deploy --token $FIREBASE_TOKEN --project dev
+  - if [ "$TRAVIS_BRANCH" = "dev" ]; then firebase deploy --token $FIREBASE_TOKEN --project dev
+  - if [ "$TRAVIS_BRANCH" = "master" ]; then firebase deploy --token $FIREBASE_TOKEN --project prod
 
 notifications:
   email:
     on_failure: change
-    on_success: change
+    on_success: change 
