--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,13 @@ before_script:
   - npm install -g @angular/cli
 
 script:
-  - if [ "$TRAVIS_BRANCH" = "dev" ]; then ng build
-  - if [ "$TRAVIS_BRANCH" = "master" ]; then ng build -prod
+  - test $TRAVIS_BRANCH = "dev" &&  ng build
+  - test $TRAVIS_BRANCH = "master" && ng build -prod
 
 after_success:
   #- firebase deploy --token $FIREBASE_TOKEN --project dev
-  - if [ "$TRAVIS_BRANCH" = "dev" ]; then firebase deploy --token $FIREBASE_TOKEN --project dev
-  - if [ "$TRAVIS_BRANCH" = "master" ]; then firebase deploy --token $FIREBASE_TOKEN --project prod
+  - test $TRAVIS_BRANCH = "dev" && firebase deploy --token $FIREBASE_TOKEN --project dev
+  - test $TRAVIS_BRANCH = "dev" && firebase deploy --token $FIREBASE_TOKEN --project prod
 
 notifications:
   email:
