trying to get travis.ci to build and deploy branches based on configurations.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 after_success:
   #- firebase deploy --token $FIREBASE_TOKEN --project dev
   - test $TRAVIS_BRANCH = "dev" && firebase deploy --token $FIREBASE_TOKEN --project dev
-  - test $TRAVIS_BRANCH = "dev" && firebase deploy --token $FIREBASE_TOKEN --project prod
+  - test $TRAVIS_BRANCH = "master" && firebase deploy --token $FIREBASE_TOKEN --project prod
 
 notifications:
   email:
